--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
   <div class="nav-links">
     <a href="/">Home</a>
     <a href="/about">About</a>
@@ -7,6 +7,19 @@
     <a href="/dietitian">Dietitian</a>
     <a href="/content">Content</a>
     <a href="/contact">Contact</a>
+  </div>
+  <div class="nav-overlay"></div>
+</nav> -->
+
+<nav>
+  <div class="nav-links">
+    <a href="/pro-site/">Home</a>
+    <a href="/pro-site/about">About</a>
+    <a href="/pro-site/athlete">Athlete</a>
+    <a href="/pro-site/gallery">Gallery</a>
+    <a href="/pro-site/dietitian">Dietitian</a>
+    <a href="/pro-site/content">Content</a>
+    <a href="/pro-site/contact">Contact</a>
   </div>
   <div class="nav-overlay"></div>
 </nav>
