Change styling for img alt on home, fix link

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -8,8 +8,8 @@ const prositeURL = `/pro-site/${url}`;
   <div>
     <p class="type">{type}</p>
   </div>
-  <!-- <a href={url}> -->
-  <a href={prositeURL}>
+  <a href={url}>
+  <!-- <a href={prositeURL}> -->
     <h4>{title}</h4>
     <p>{description}</p>
   </a>
