--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const psycho = "../src/images/gallery/psycho.jpg";
           </div>
           <div class="athlete more-wrapper">
             <a href="/athlete">
-              <img src="../src/images/icons/arrow-simple.svg" alt="⇒">
+              <img src="../src/images/icons/arrow-simple.svg" alt="↓">
               <p>View More</p>
             </a>
           </div>
@@ -82,7 +82,7 @@ const psycho = "../src/images/gallery/psycho.jpg";
           </ul>
           <div class="dietician more-wrapper">
             <a href="/dietician">
-              <img src="../src/images/icons/arrow-simple.svg" alt="⇒">
+              <img src="../src/images/icons/arrow-simple.svg" alt="↓">
               <p>Learn More</p>
             </a>
           </div>
@@ -213,6 +213,13 @@ const psycho = "../src/images/gallery/psycho.jpg";
     background-color: lightgrey;
     border-radius: 3px;
     transition: all 0.25s ease-in;
+    /* added, need to confirm */
+    width: 60px;
+    color: rgb(64, 64, 64);
+    font-size: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .more-wrapper > a:hover {
     background-color: lightgrey;
