--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -23,9 +23,9 @@ const image = {
       <!-- <span>Scroll Down</span> -->
     </div>
   </div>
-  <a id="achievements">
+  <div id="achievements">
     <Achieve />
-  </a>
+  </div>
   <Sponsor />
 </BaseLayout>
 <script defer>
