Change img filename

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ const bigwall = [
 
 const pageTitle = "Amity | Home"
 const img = {
-  url: "../src/images/gallery/Amity_Goldengate.Lite.jpg",
+  url: "src/images/gallery/Amity_Goldengate.Lite.jpg",
   position: "75%",
 }
 const arrow = "src/images/icons/arrow-custom.png";
