Trying to debug photo fail to load

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -5,7 +5,8 @@ import '../styles/global.css';
 
 const { pageTitle, img } = Astro.props;
 const baseImage = "src/images/gallery/lifeline.jpg"
-const background = img ? `url(${img.url})` : `url(${baseImage})`;
+// const background = img ? `url(${img.url})` : `url(${baseImage})`;
+const background = img ? `${img.url}` : `${baseImage}`;
 const position = img ? `${img.position}` : 'center';
 
 ---
@@ -18,7 +19,7 @@ const position = img ? `${img.position}` : 'center';
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
 	</head>
-	<body>
+	<body style=`background-image: url(${background});` >
     <Header />
     <slot />
     <Footer />
@@ -28,7 +29,7 @@ const position = img ? `${img.position}` : 'center';
     </script>
     <style define:vars={{background, position}}>
       body {
-        background-image: var(--background);
+        /* background-image: var(--background); */
         background-position: var(--position);
         background-repeat: no-repeat;
         background-attachment: fixed;
