--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -1,7 +1,8 @@
 ---
 import BaseLayout from './BaseLayout.astro';
+import gate from "../images/gallery/gate.jpg";
 const image = {
-  url: "../src/images/gallery/gate.jpg",
+  url: gate,
   position: "25%",
 }
 const { frontmatter } = Astro.props;
