Update photo imports

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,10 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import barnacle from "../images/gallery/Shaffer_Taylor-17.Lite.jpg";
 
 const pageTitle = "Amity | About"
 const image = {
-  url: "../src/images/gallery/Shaffer_Taylor-17.Lite.jpg",
+  url: barnacle,
   position: '22% top',
 }
 ---
