--- a/src/pages/athlete.astro
+++ b/src/pages/athlete.astro
@@ -2,10 +2,11 @@
 import Achieve from "../components/Achieve.astro";
 import Sponsor from "../components/Sponsor.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import wolverine from "../images/gallery/Wolverine.Lite.jpg";
+import arrow from "../images/icons/arrow-simple.svg";
 
-const arrow = "../src/images/icons/arrow-simple.svg";
 const image = {
-  url: "../src/images/gallery/Wolverine.Lite.jpg",
+  url: wolverine,
   position: 'center',
 }
 ---
@@ -49,7 +50,7 @@ const image = {
     font-family: "Unbound", Georgia, 'Times New Roman', Times, serif;
     font-size: 24px;
     font-weight: 500;
-    color: whitesmoke;
+    color: rgb(245, 245, 245);
     padding: 0 1vw 0 1vw;
     margin: 0;
   }
