Transition to mdx, update image

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -6,6 +6,7 @@ import frontier from "../images/posts/finalfrontier1.jpg";
 import fuel from "../images/posts/fuel.jpg";
 import turkey from "../images/gallery/JohnnyLat.jpg";
 import barnacle from "../images/gallery/Shaffer_Taylor-17.Lite.jpg";
+import golden from "../images/gallery/Amity_Goldengate.Lite.jpg";
 
 const image = {
   url: gate,
@@ -19,7 +20,9 @@ const images = [
   gate,
   turkey,
   barnacle,
+  golden,
   
+
 ]
 const { frontmatter } = Astro.props;
 ---
