--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -7,6 +7,7 @@ import fuel from "../images/posts/fuel.jpg";
 import turkey from "../images/gallery/JohnnyLat.jpg";
 import barnacle from "../images/gallery/Shaffer_Taylor-17.Lite.jpg";
 import golden from "../images/gallery/Amity_Goldengate.Lite.jpg";
+import enormo from "../images/posts/enormo.jpg";
 
 const image = {
   url: gate,
@@ -21,7 +22,10 @@ const images = [
   turkey,
   barnacle,
   golden,
+  enormo,
+  "https://images.squarespace-cdn.com/content/v1/5e12721e9cacc8033cd889f6/34eeccbb-34c1-4c97-ac10-ea96e2fdcfd4/--Episode+Cover.png",
   
+
 
 ]
 const { frontmatter } = Astro.props;
