Update recipe blogs to mdx, update image

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -8,6 +8,11 @@ import turkey from "../images/gallery/JohnnyLat.jpg";
 import barnacle from "../images/gallery/Shaffer_Taylor-17.Lite.jpg";
 import golden from "../images/gallery/Amity_Goldengate.Lite.jpg";
 import enormo from "../images/posts/enormo.jpg";
+import banana from "../images/posts/bananabread.png";
+import blackberry from "../images/posts/blackberry.png";
+import pudding from "../images/posts/pudding.png";
+import zucchini from "../images/posts/zucchini.png";
+import pumpkin from "../images/posts/pumpkin.png";
 
 const image = {
   url: gate,
@@ -24,9 +29,11 @@ const images = [
   golden,
   enormo,
   "https://images.squarespace-cdn.com/content/v1/5e12721e9cacc8033cd889f6/34eeccbb-34c1-4c97-ac10-ea96e2fdcfd4/--Episode+Cover.png",
-  
-
-
+  banana,
+  blackberry,
+  pudding,
+  zucchini,
+  pumpkin,
 ]
 const { frontmatter } = Astro.props;
 ---
