--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -46,7 +46,7 @@ const { frontmatter } = Astro.props;
         <p class="blog-intro"><em>{frontmatter.description}</em></p>
         { frontmatter.author ? <p class="blog-intro"> {frontmatter.author}</p> : null }
       </div>
-      <img class="blog-main-image" src={images[frontmatter.image.index]} alt={frontmatter.image.alt} />
+      <img class="blog-main-image" src={images[frontmatter.image.index] || null} alt={frontmatter.image.alt} />
       { frontmatter.image.caption ? <figcaption>{frontmatter.image.caption}</figcaption> : null }
       { frontmatter.image.cred ? <figcaption class="cap-credit">Credit: {frontmatter.image.cred}</figcaption> : null }
       { frontmatter.origin ? <p class="origin">Originally posted by <a href={frontmatter.origin.url}>{frontmatter.origin.name}</a></p> : null }
