--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -3,7 +3,7 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import BlogPost from "../../components/BlogPost.astro";
 
 export async function getStaticPaths() {
-  const allPosts = await Astro.glob('../posts/*.md');
+  const allPosts = await Astro.glob('../posts/*.mdx');
   // gather all unique tags in an array
   const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
   // dynamically generate pages for each tag (ie returning only blogs w/ given tag)
