Small styling adjustments

--- a/src/components/Sponsor.astro
+++ b/src/components/Sponsor.astro
@@ -91,7 +91,7 @@ const sponsors = [
           <img src={sponsor.img.url} alt={sponsor.img.alt} height={sponsor.img.size}>
         </a>
       </div>
-    ))}
+      ))}
   </div>
 </section>
 
@@ -102,7 +102,7 @@ const sponsors = [
     width: 100vw;
     text-align: center;
     padding: 4vh 0;
-    margin: 15vh 0 25vh 0;
+    margin-top: 45vh;
   }
   h2 {
     text-transform: uppercase;
