--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -91,10 +91,10 @@ h1 {
 }
 .nav-overlay {
   position: fixed;
-  top: 0;
+  top: -1px;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 1px;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   visibility: hidden;
@@ -107,6 +107,8 @@ h1 {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
 .expanded > .nav-overlay {
+  height: 100vh;
+  top: 0;
   visibility: visible;
   opacity: 1;
   z-index: 1;
