--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -96,6 +96,7 @@ h1 {
   width: 100vw;
   height: 1px;
   background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(5px);
   backdrop-filter: blur(5px);
   visibility: hidden;
   opacity: 0;
