Attempt to debug ios background image issue

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -35,6 +35,11 @@ const position = img ? `${img.position}` : 'center';
         min-height: 100vh;
         background-size: cover;
       }
+      @media (hover: none) {
+        body {
+          background-attachment: scroll;
+        }
+      }
     </style>
 	</body>
 </html>
