--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -340,4 +340,10 @@ const markVar = `url(${mark})`;
       grid-column: 3/4;
     }
   }
+  @media (hover: none) {
+    .bg-img1,
+    .bg-img2 {
+      background-attachment: scroll;
+    }
+  }
 </style>
