Add new blog w/ images

--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -13,6 +13,7 @@ import blackberry from "../images/posts/blackberry.png";
 import pudding from "../images/posts/pudding.png";
 import zucchini from "../images/posts/zucchini.png";
 import pumpkin from "../images/posts/pumpkin.png";
+import friad from "../images/posts/friad.jpeg";
 
 const image = {
   url: gate,
@@ -34,6 +35,7 @@ const images = [
   pudding,
   zucchini,
   pumpkin,
+  friad,
 ]
 const { frontmatter } = Astro.props;
 ---
