--- a/src/layouts/MdPostLayout.astro
+++ b/src/layouts/MdPostLayout.astro
@@ -14,6 +14,7 @@ import pudding from "../images/posts/pudding.png";
 import zucchini from "../images/posts/zucchini.png";
 import pumpkin from "../images/posts/pumpkin.png";
 import friad from "../images/posts/friad.jpeg";
+import struggle from "../images/posts/struggle.jpg";
 
 const image = {
   url: gate,
@@ -36,6 +37,7 @@ const images = [
   zucchini,
   pumpkin,
   friad,
+  struggle,
 ]
 const { frontmatter } = Astro.props;
 ---
@@ -129,6 +131,7 @@ const { frontmatter } = Astro.props;
     }
     .blog-main-image {
       margin-bottom: 0.5rem;
+      max-height: 445px;
     }
     figcaption {
       font-size: 0.85rem;
