--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,8 +46,12 @@ const turkeyVar = `url(${turkey})`;
 const corazonVar = `url(${corazon})`;
 const markVar = `url(${mark})`;
 
+// take out img={img} from baselayout
 ---
-<BaseLayout pageTitle={pageTitle} img={img}>
+<BaseLayout pageTitle={pageTitle} >
+  <div class="mobile-img">
+    <img src={golden} />
+  </div>
   <div class="home-wrapper">
     <div class="home-title-wrapper">
       <div class="home-title-content">
@@ -110,6 +114,15 @@ const markVar = `url(${mark})`;
 <style define:vars={{psychoVar, turkeyVar, arrowVar, corazonVar, markVar}}>
   h1 {
     font-family: "Unbound", "Playfair", Georgia, 'Times New Roman', Times, serif;
+  }
+  .mobile-img {
+    position: fixed;
+    height: 100vh;
+    min-width: 100vw;
+    z-index: -1;
+  }
+  .mobile-img > img {
+    height: 100%;
   }
   .home-wrapper {
     color: rgb(64, 64, 64);
