Fix link underline (remove from footer display)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,6 @@ html {
   font-family: sans-serif;
   scroll-behavior: smooth;
 }
-
 body {
   margin: 0;
   width: 100%;
@@ -23,13 +22,8 @@ body {
   font-family: "Playfair", Georgia, 'Times New Roman', Times, serif;
   background-color: rgb(245, 245, 245);
 }
-
 * {
   box-sizing: border-box;
-}
-a {
-  color: rgb(53, 84, 136);
-  text-decoration: 1px underline;
 }
 h1 {
   margin: 1rem 0;
@@ -182,8 +176,11 @@ h1 {
 }
 /* blog post styling */
 .blog-slot a,
-.origin > a {
+.origin > a, 
+.intel > a {
   font-weight: 500;
+  color: rgb(53, 84, 136);
+  text-decoration: 1px underline;
 }
 .blog-slot img,
 .blog-main-image {
